# minecraft_gl

./: .clang-format  .gitignore  CMakeLists.txt  a.out  cargo.toml  readme.md  run.sh
include/: hello.hpp  pch.hpp
include/Ecs/: EcsConstants.hpp  Layer.hpp  component.hpp  componentAllocator.hpp  componentManager.hpp  entity.hpp  entityComponentSystem.hpp  entityManager.hpp  entityWrapper.hpp  signature.hpp  systemManager.hpp  typeId.hpp
include/core/: application.hpp  window.hpp
include/event/: event.hpp  eventManager.hpp
include/rendering/: camera.hpp  mesh.hpp
include/scene/: gameScene.hpp  scene.hpp
include/util/: NDArray.hpp  constants.hpp  contracts.hpp  input.hpp  inputMap.hpp  macros.hpp  time.hpp  types.hpp
include/world/: block.hpp  chunk.hpp  chunkMesher.hpp  worldConstants.hpp
libs/Glad/: Makefile  cmake_install.cmake
libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glm/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
minecraft_gl/: Cargo.toml
minecraft_gl/assets/data/biome/: forest.json
minecraft_gl/assets/data/block/atlas/: metadata.json
minecraft_gl/assets/data/block/json/: air.json  dirt.json  flower.json  grass.json  gravel.json  leaves.json  sand.json  stone.json  tallGrass.json  water.json  wood.json
minecraft_gl/assets/data/item/atlas/: metadata.json
minecraft_gl/assets/data/item/json/: biden.json  dirt.json
minecraft_gl/assets/shaders/: hehe.glsl  triangle.glsl  world.glsl  world.wgsl
minecraft_gl/src/: main.rs
minecraft_gl/src/Core/: application.rs  input.rs  mod.rs  window.rs
minecraft_gl/src/Ecs/: component.rs  ecs.rs  mod.rs  util.rs
minecraft_gl/src/Event/: event.rs  eventBus.rs  mod.rs
minecraft_gl/src/OpenGL/: buffer.rs  cubemap.rs  frameBuffer.rs  mod.rs  shader.rs  texture.rs  vao.rs
minecraft_gl/src/Renderer/: batchedWorld.rs  mod.rs  renderer.rs  spriteRenderer.rs  worldRenderer.rs
minecraft_gl/src/Scene/: camera.rs  mainmenu.rs  mod.rs  sceneManager.rs  worldScene.rs
minecraft_gl/src/Util/: atlas.rs  fustrum.rs  greedyMeshHelper.rs  mod.rs  parser.rs  resource.rs  scene.rs
minecraft_gl/src/World/: biomeGenerator.rs  block.rs  blockBehavior.rs  chunk.rs  crafting.rs  item.rs  itemBehavior.rs  mod.rs  world.rs
proc_macro/: Cargo.toml
proc_macro/proc_macro_derive/: Cargo.toml
proc_macro/src/: lib.rs
src/: main.cpp
src/ECS/: componentManager.cpp  entityComponentSystem.cpp  entityManager.cpp  layer.cpp  signature.cpp  (+1 more)
(+121 files in other folders)
