[package]
name = "minecraft_gl"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "0.6.0"
image = "0.23.14"
queues = "*"
lazy_static = "1.4.0"
serde_json = "1.0"
nalgebra = "0.31.0"
proc_macro = {path = "../proc_macro"}
proc_macro_derive = {path = "../proc_macro/proc_macro_derive"}

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"