[package]
name = "minecraft_gl"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.23.14"
queues = "*"
serde_json = "1.0"
nalgebra = "0.31.0"
noise = "0.7.0"
glium = "*"
lazy_static = "1.4.0"
rand = "0.8.5"
proc_macro = {path = "../proc_macro"}
proc_macro_derive = {path = "../proc_macro/proc_macro_derive"}
