[package]
name = "minecraft_gl"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.23.14"
queues = "*"
serde_json = "1.0"
nalgebra = "0.31.0"
glium = "*"
bracket-noise = "0.8.2"
rand = "0.8.5"
rayon = "1.5.3"
proc_macro = {path = "../proc_macro"}
proc_macro_derive = {path = "../proc_macro/proc_macro_derive"}
